# stellarsurprise

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  jest.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
docs/: ARCHITECTURE.md
migrations/: 001_init.sql  002_otp.sql
src/__tests__/: gift.service.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/cron/unlock/: route.ts
src/app/api/gifts/: route.ts
src/app/api/gifts/[id]/: route.ts
src/app/api/gifts/[id]/claim/: route.ts
src/app/api/payments/paystack/: route.ts
src/app/dashboard/: page.tsx
src/app/send/: page.tsx
src/lib/: db.ts  redis.ts  stellar.ts
src/server/middleware/: auth.ts
src/server/services/: claim.service.ts  gift.service.ts  scheduler.ts  stellar.service.ts
src/types/: index.ts
